Add logo and change nav design

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 		</p>
 		<p>info@yourdomain.com</p>
 	</div>
-</div><div id="side-search" class="sidenav">
+</div>
+
+<div id="side-search" class="sidenav">
 	<a href="javascript:void(0)" id="side-search-close">&times;</a>
 	<div class="sidenav-content">
 		<form action="">
@@ -99,16 +101,25 @@
 
 		</form>
 	</div>
-	
-</div>	<div class="jumbotron d-flex align-items-center">
-  <div class="container text-center">
-    <h1 class="display-1 mb-4">Serving You With Care</h1>
+</div>	
+
+<div class="jumbotron d-flex align-items-center">
+  <div class="container-wrapper">
+      <div class="container text-center"><h1 class="display-1 mb-4">Staff</h1></div>
+      <div class="container text-center"><h1 class="display-1 mb-4">Office</h1></div>
+      <div class="container text-center"><h1 class="display-1 mb-4">Services and Prices</h1></div>
+      <div class="container text-center"><h1 class="display-1 mb-4">Telehealth</h1></div>
+      <div class="container text-center"><h1 class="display-1 mb-4">New Patients</h1></div>
+      <div class="container text-center"><h1 class="display-1 mb-4">Contact Us</h1></div>
+      <div class="container text-center"><h1 class="display-1 mb-4">FAQs</h1></div>
   </div>
+
+  
   <div class="rectangle-1"></div>
   <div class="rectangle-2"></div>
   <div class="rectangle-transparent-1"></div>
   <div class="rectangle-transparent-2"></div>
-  <div class="circle-1"></div>
+  <!-- <div class="circle-1"></div>
   <div class="circle-2"></div>
   <div class="circle-3"></div>
   <div class="triangle triangle-1">
@@ -122,8 +133,10 @@
   </div>
   <div class="triangle triangle-4">
   	<img src="img/obj_triangle.png" alt="">
-  </div>
-</div>	<!-- Features Section-->
+  </div> -->
+</div>	
+
+<!-- Features Section-->
 <section id="features" class="bg-white">
     <div class="container">
         <div class="section-content">
